# EEWRest

./: .coveragerc  .flake8  .gitignore  README.md  __init__.py  architecture.md  pyproject.toml  requirements.txt  views.py
params/: EEWRESTProperties.toml  QuakeML_EEWTemplate.xml
test/: __init__.py  conftest.py  test_routes.py  test_util_functions.py
test/input/: true_alert.json
