# pyproject.toml
[project]
name = "EEWRest"
description = "Provides an HTTP API for sending ShakeAlert follow-up data to ComCat via PDL."
version = "0.1.3"
requires-python = ">=3.6"
readme = "README.md"
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload"
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.flask]
app_name = "EEWRest"

[tool.pip]
requirements = "requirements.txt"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "test",
]
